fix the cut off text in the marquee

--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ body {
 
 #alarm-marquee {
     width: 80%;
-    height: 1em;
+    height: 1.1em;
 
     overflow: hidden;
 
